--- a/client/src/app/features/shop/product-item/product-item.component.html
+++ b/client/src/app/features/shop/product-item/product-item.component.html
@@ -1,6 +1,6 @@
-@if(product){
-  <mat-card appearance="raised">
-    <img src="{{product.pictureUrl}}" class="rounded-t-lg" alt=" image of {{product.name}}">
+@if (product) {
+<mat-card appearance="raised">
+    <img src="{{product.pictureUrl}}" class="rounded-t-lg" alt="image of {{product.name}}">
     <mat-card-content class="mt-2">
       <h2 class="text-sm font-semibold uppercase">{{product.name}}</h2>
       <p class="font-light">{{product.price | currency}}</p>
@@ -8,10 +8,8 @@
     <mat-card-actions>
       <button mat-stroked-button class="w-full">
         <mat-icon>add_shopping_cart</mat-icon>
-        Add to Cart
+        Add to cart
       </button>
     </mat-card-actions>
-  </mat-card>
+</mat-card>
 }
-
-
