feat: end of section 10

--- a/client/src/app/features/shop/product-item/product-item.component.html
+++ b/client/src/app/features/shop/product-item/product-item.component.html
@@ -1,5 +1,5 @@
 @if (product) {
-<mat-card appearance="raised">
+<mat-card appearance="raised" routerLink="/shop/{{product.id}}" class="product-card">
     <img src="{{product.pictureUrl}}" class="rounded-t-lg" alt="image of {{product.name}}">
     <mat-card-content class="mt-2">
       <h2 class="text-sm font-semibold uppercase">{{product.name}}</h2>
