--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -7,13 +7,10 @@
 @use '@angular/material' as mat;
 
 :root {
-  @include mat.button-overrides((
-    filled-container-shape: '6px',
-    outlined-container-shape: '6px'
-  ));
-  @include mat.badge-overrides((
-    background-color: blue
-  ));
+  @include mat.button-overrides((filled-container-shape: '6px',
+      outlined-container-shape: '6px'
+    ));
+  @include mat.badge-overrides((background-color: blue));
 }
 
 html {
@@ -29,6 +26,10 @@ html {
 
 .match-input-height{
   height: var(--mat-form-field-container-height) !important;
+}
+
+.mdc-notched-outline__notch {
+  border-right-style: none !important;
 }
 
 body {
