feat: end of section 18

--- a/client/src/app/features/checkout/checkout-review/checkout-review.component.html
+++ b/client/src/app/features/checkout/checkout-review/checkout-review.component.html
@@ -5,7 +5,7 @@
       <dt class="font-medium">Shipping address</dt>
       <dd class="mt-1 text-gray-500">{{confirmationToken?.shipping | address}}</dd>
       <dt class="font-medium">Payment details</dt>
-      <dd class="mt-1 text-gray-500">{{confirmationToken?.payment_method_preview | card}}</dd>
+      <dd class="mt-1 text-gray-500">{{confirmationToken?.payment_method_preview | paymentCard}}</dd>
     </dl>
 </div>
 <div class="mt-6 mx-auto">
